tests/NormalTests/paczka1/small_fuzzy/49260513.err
Error in line 1: qyHz A500 78,1
Error in line 9: 1INYHFWV A520 90,5
